...
    <string name="app_name">Cardido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    Ini Login string buat login-->
    <string name="login">Login</string>
    <string name="hello">Hi! Welcome</string>
    <string name="email">Email*</string>
    <string name="pass">Password*</string>
    <string name="button">Login</string>
    <string name="signUp">Sign Up</string>

...
