...
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAddUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
...
